--- a/5-Folds Cross Validation Transplant Rejection Training.ipynb
+++ b/5-Folds Cross Validation Transplant Rejection Training.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Script Plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Imports \n",
+    "2. Parameters and variables \n",
+    "3. Data imports \n",
+    "4. Load Pre-trained model \n",
+    "5. Model building functions \n",
+    "6. Cross validation loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## IMPORTS"
    ]
   },
