--- a/ECG Auto Cropping.ipynb
+++ b/ECG Auto Cropping.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This script develops an autocropping function to cut out the rhythm strip on the bottom of the 12-lead ECG image. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Imports"
    ]
   },
