--- a/Transplant Dataset Preparation.ipynb
+++ b/Transplant Dataset Preparation.ipynb
@@ -5,7 +5,7 @@
    "id": "3057a789",
    "metadata": {},
    "source": [
-    "# Data loading "
+    "# Data loading and pre-processing images"
    ]
   },
   {
@@ -17,7 +17,8 @@
     "1. Read in excel of patient IDs, days post transplant, rejection grade (excel file -> pandas)\n",
     "2. Make folders for binary dataset / multiclass dataset\n",
     "3. Iterate through dataframe patient ids:\n",
-    "    - Piece together image code (PA****[P/E]N****.png)\n",
+    "    - Resize the image and change to greyscale\n",
+    "    - Piece together image code (PA****[E/P]N****.png)\n",
     "    - Take rejection grade\n",
     "    - Locate image file in transplant folder in transplant ecg folder\n",
     "    - Assign label based on current classification task\n",
