--- a/Transplant Rejection Network Training.ipynb
+++ b/Transplant Rejection Network Training.ipynb
@@ -40,7 +40,9 @@
     "    - Write Results Function\n",
     "\n",
     "Training plan: \n",
-    "1. SWOIP: single with only image pretraining \n",
+    "1. Ensemble ImageNet Pre-trained model (ENB3) \n",
+    "2. Ensemble ImageNet + AF Pre-trained model \n",
+    "3. Ensemble ImageNet + MI Pre-trained model  \n",
     "\n",
     "Tuning: \n",
     "1. Learning rate \n",
